--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: geowanhee
-site_description: a python packes for wanhee's geo510
+site_description: a python package for wanhee's geo510
 site_author: whkim15
 site_url: https://whkim15.github.io/geowanhee
 repo_url: https://github.com/whkim15/geowanhee
